; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath5k/extr_phy.c_ath5k_get_interpolated_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath5k/extr_phy.c_ath5k_get_interpolated_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64, i64, i64)* @ath5k_get_interpolated_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ath5k_get_interpolated_value(i64 %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store i64 %0, i64* %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %21, label %17

17:                                               ; preds = %5
  %18 = load i64, i64* %10, align 8
  %19 = load i64, i64* %11, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17, %5
  %22 = load i64, i64* %10, align 8
  store i64 %22, i64* %6, align 8
  br label %42

23:                                               ; preds = %17
  %24 = load i64, i64* %11, align 8
  %25 = mul nsw i64 100, %24
  %26 = load i64, i64* %10, align 8
  %27 = mul nsw i64 100, %26
  %28 = sub nsw i64 %25, %27
  %29 = load i64, i64* %9, align 8
  %30 = load i64, i64* %8, align 8
  %31 = sub nsw i64 %29, %30
  %32 = sdiv i64 %28, %31
  store i64 %32, i64* %12, align 8
  %33 = load i64, i64* %10, align 8
  %34 = load i64, i64* %12, align 8
  %35 = load i64, i64* %7, align 8
  %36 = load i64, i64* %8, align 8
  %37 = sub nsw i64 %35, %36
  %38 = mul nsw i64 %34, %37
  %39 = sdiv i64 %38, 100
  %40 = add nsw i64 %33, %39
  store i64 %40, i64* %13, align 8
  %41 = load i64, i64* %13, align 8
  store i64 %41, i64* %6, align 8
  br label %42

42:                                               ; preds = %23, %21
  %43 = load i64, i64* %6, align 8
  ret i64 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
